* Mogelijkheid voor insluitend filteren op locatie toegevoegd
* Ondersteuning voor gevallen waar Magister login afwijkend is van Microsoft 365 / Azure AD identiteit. Als schakelaar UseEmail=1, dan wordt voor docenten het veld "Id" gevuld uit het overeenkomstig AD-userobject attribuut UserPrincipalName in Active Directory, door AD user-attribuut employeeId te matchen aan Magister stamnummer. Als schakelaar UseEmail=1, dan wordt voor leerlingen het Magister email-veld gebruikt voor de Id. 

## 20200701 
* toegevoegd: insluitend filter voor leerlingen op basis van locatie (Magister veld 'Administratieveeenheid.Omschrijving')
* useemail=1 : docenten zonder overeenkomstig emailadres worden eruit gefilterd. 

## 20200701a
* fout hersteld: Section SIS ID werd gevuld met teamnaam, niet teamID

## 20200702
* fout hersteld: `personeelemail.clixml` werd opgeslagen in '.\data_temp\' in plaats van datakladmap.

## 20200704
* ongebruikte variabelen en functies opgeruimd

## 20200804
* vermijd 'divide by zero' in progressiebalk als er 0 aftelbare items zijn. 

## 20200817
* (Ophalen-Magisterdata.ps1) skip leerlingen met lege id

## 20200828
* (Ophalen-Magisterdata.ps1) onderdelen geherstructureerd

* (Ophalen-Magisterdata.ps1) configvariable "handhaafJPTMedewerkerCodeIsLogin"
toegevoegd. Gebruik `handhaafJPTMedewerkerCodeIsLogin=1`. Bij verstek geldt
`handhaafJPTMedewerkerCodeIsLogin=0` . Deze instelling dient om uitsluitend
medewerkers te verwerken waarbij Magister->Code gelijk is aan
Magister->loginaccount.naam. Dit wordt in een speciaal geval voor JPT gedaan om
dubbele identiteiten weg te filteren. 

* bugfix: In sommige gevallen werden teveel medewerkers afgekeurd voor verdere
verwerking wanneer code of loginaccount.name niet gelijk of ingevuld waren.
Config `handhaafJPTMedewerkerCodeIsLogin=0` verhelpt dat. 


## TO DO

* SDS V2 format 
* parameter: viewonly ; Laat Ophalen.ps1 alleen gegevens uit Magister ophalen en en tonen. 
* configvariabele PaarIdAan={email,login}